# bookmark-sorter

./: .coverage  .coverage.Sergeys-Mini.msmsoft.net.10820.XWgdoidx  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  README.md  TR.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: config.example.yaml  config.local.yaml  config.real.embed.yaml  config.real.llm.yaml  config.real.yaml  rules.example.yaml
data/samples/: bookmarks.sample.json  bookmarks_9_3_25.html
out_real/: bookmarks.cleaned.html  report.html
out_real_embed/: bookmarks.cleaned.html  report.md
out_real_llm/: bookmarks.cleaned.html
src/cbclean/: apply.py  backup.py  chrome_reader.py  classify_embed.py  classify_llm.py  classify_rules.py  cli.py  cluster.py  config.py  dedup.py  fetch.py  normalize.py  propose.py  report.py  storage.py  utils.py
templates/: report.html.j2  report.md.j2
tests/: conftest.py  test_apply_escape.py  test_apply_export.py  test_apply_html_escape_unit.py  test_backup.py  test_chrome_reader.py  test_chrome_reader_more.py  test_classify_llm.py  test_classify_llm_dynamic.py  test_classify_llm_edges.py  test_classify_llm_openai_duck.py  test_classify_rules.py  test_classify_rules_keywords.py  test_classify_rules_yaml_absent.py  test_classify_stubs.py  test_cli.py  test_cli_modes.py  test_config.py  test_dedup.py  test_fetch.py  test_normalize.py  test_normalize_module.py  test_propose.py  test_report.py  test_storage.py  test_utils.py  test_utils_exceptions.py
